--- a/src/scss/sections/_about.scss
+++ b/src/scss/sections/_about.scss
@@ -1,24 +1,72 @@
 #about {
-  background-color: #222;
+  background-color: #000;
   width: 100%;
   padding: 1rem 3rem 3rem;
-  font-family: "Roboto", Arial, Helvetica, sans-serif;
 }
 
 .about-content {
-  max-width: 1400px;
+  max-width: 1100px;
   padding: 3rem 0 2rem;
   margin: 0 auto;
   gap: 2rem;
   flex-direction: column;
-  text-align: center;
-  color: #fff;
+  color: var(--clr-primary_dk);
 
-  & img {
-    max-width: 100%;
+  p {
+    color: #fff;
+    line-height: 1.4;
+    --measure: 50ch;
   }
 }
 
 .about-copy {
-  padding: 2rem;
+  flex: 1 1 60%;
+
+  h2 {
+    font-size: 2.5rem;
+    text-align: center;
+    margin-bottom: 1rem;
+  }
+
+  hr {
+    border: 0;
+    height: 1px;
+    background: #333;
+    background-image: linear-gradient(
+      to right,
+      #000,
+      var(--clr-secondary_lt),
+      #000
+    );
+  }
+
+  p {
+    padding: 0 1.5rem;
+    margin-top: 1.5rem;
+  }
+}
+
+.tech {
+  flex: 1 1 40%;
+  padding: 1rem;
+  text-align: center;
+
+  h4 {
+    margin: 0;
+  }
+
+  &-list {
+    flex: 0 1 60ch;
+    flex-wrap: wrap;
+    padding: 0;
+    li {
+      display: inline-block;
+      color: #fff;
+      line-height: 1.6;
+      font-size: 0.9rem;
+      border: 1px solid white;
+      padding: 0.25rem 0.5rem;
+      margin: 0.5rem 0.5rem 0;
+    }
+  }
 }
