--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -5,7 +5,6 @@
   left: 0;
   right: 0;
   z-index: 10;
-  font-family: "Roboto", Arial, Helvetica, sans-serif;
   transition: background-color 0.3s ease-in;
 
   &-content {
