--- a/src/scss/sections/_hero.scss
+++ b/src/scss/sections/_hero.scss
@@ -2,7 +2,6 @@
   width: 100%;
   height: 100vh;
   padding: 120px 0;
-  font-family: "Roboto", Arial, Helvetica, sans-serif;
   position: relative;
   background-image: linear-gradient(
       to top,
@@ -53,8 +52,8 @@
 
     &:hover {
       transform: scale(1.1);
-      border-color: var(--clr-primary_lt);
-      color: var(--clr-primary_lt);
+      // border-color: var(--clr-primary_lt);
+      // color: var(--clr-primary_lt);
     }
   }
 }
