--- a/src/scss/sections/_projects.scss
+++ b/src/scss/sections/_projects.scss
@@ -1,8 +1,8 @@
 #portfolio {
   width: 100%;
   padding: 89px 2rem 3rem;
-  font-family: "Roboto", Arial, Helvetica, sans-serif;
   background-color: #111;
+  background: linear-gradient(to bottom, rgb(24, 17, 75), rgba(0, 0, 0, 1));
   color: white;
 }
 
@@ -14,8 +14,20 @@
 
   & > hr {
     border: 0;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
-    max-width: 60%;
+    height: 1px;
+    background: #333;
+    background-image: linear-gradient(
+      to right,
+      #150f42,
+      var(--clr-primary_lt),
+      #150f42
+    );
+  }
+}
+
+.projects-headline {
+  h2 {
+    color: var(--clr-primary_dk);
   }
 }
 
